--- a/src/theme/templates/authentication/login_request.html
+++ b/src/theme/templates/authentication/login_request.html
@@ -44,9 +44,11 @@
               </label>
             </div>
 
-            <button type="submit" class="btn btn-primary w-full text-sm sm:text-base">
-              Solicitar Acceso
-            </button>
+            <div class="flex justify-center">
+              <button type="submit" class="btn btn-primary text-sm sm:text-base">
+                Solicitar Acceso
+              </button>
+            </div>
           </form>
         </div>
       </div>
